<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>lab.square.spltcoverage</groupId>
	<artifactId>lab.square.spltcoverage</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>guru.nidi</groupId>
			<artifactId>graphviz-java</artifactId>
			<version>0.18.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jacoco/org.jacoco.core -->
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>org.jacoco.core</artifactId>
			<version>0.7.7.201606060606</version>
		</dependency>

		<dependency>
			<groupId>lab.square.similaritymeasure</groupId>
			<artifactId>lab.square.similaritymeasure</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
	</dependencies>
</project>